force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DateTimeIncident__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateTimeIncident__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Date Time of Incident</label>
    <type>DateTime</type>
</CustomField>