force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Depth__c.field-meta.xml
<CustomField>
    <fullName>FSM_Depth__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Depth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 150mm</fullName>
            </value>
            <value>
                <fullName>150 – 600mm</fullName>
            </value>
            <value>
                <fullName>&gt; 600mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>