force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DetailsOfProposedWork__c.field-meta.xml
<CustomField>
    <fullName>FSM_DetailsOfProposedWork__c</fullName>
    <description>SFS-3010</description>
    <label>Details of proposed work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>