force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DetailsSafetyInformation__c.field-meta.xml
<CustomField>
    <fullName>FSM_DetailsSafetyInformation__c</fullName>
    <description>SFS-3010</description>
    <inlineHelpText>Please add additional information to outline what health and safety issues are present onsite and any additional equipment required</inlineHelpText>
    <label>Details and safety information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>