force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DeviceType__c.field-meta.xml
<CustomField>
    <fullName>FSM_DeviceType__c</fullName>
    <description>sfs-6005</description>
    <label>DeviceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>