force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DischargePoint__c.field-meta.xml
<CustomField>
    <fullName>FSM_DischargePoint__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Discharge Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>