force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DischargeRateofPollutant__c.field-meta.xml
<CustomField>
    <fullName>FSM_DischargeRateofPollutant__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>DISCHARGE RATE OF POLLUTANT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No discharge to water found (at time of visit) – No Flow</fullName>
            </value>
            <value>
                <fullName>A discharge to water found (at time of visit) – Trickle</fullName>
            </value>
            <value>
                <fullName>A discharge to water found (at time of visit) – Medium Flow</fullName>
            </value>
            <value>
                <fullName>A discharge to water found (at time of visit) – High Flow</fullName>
            </value>
            <value>
                <fullName>Evidence of recent discharge to water (not discharging at time of visit) – No Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>