force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DownMan2Condition__c.field-meta.xml
<CustomField>
    <fullName>FSM_DownMan2Condition__c</fullName>
    <label>What is condition/location of monitor?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>