force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DownMan2Monitor__c.field-meta.xml
<CustomField>
    <fullName>FSM_DownMan2Monitor__c</fullName>
    <label>Is there a monitor on this MH?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>