force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DownManDebris__c.field-meta.xml
<CustomField>
    <fullName>FSM_DownManDebris__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <label>Debris/silt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Silt/Debris</fullName>
            </value>
            <value>
                <fullName>Yes Silt/Debris - No FOW needed</fullName>
            </value>
            <value>
                <fullName>Yes Silt/Debris - FOW needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>