force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_DownManStepIron__c.field-meta.xml
<CustomField>
    <fullName>FSM_DownManStepIron__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <label>Step iron check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Good Condition</fullName>
            </value>
            <value>
                <fullName>Poor Condition</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>