force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Downstream10m__c.field-meta.xml
<CustomField>
    <fullName>FSM_Downstream10m__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4810</description>
    <label>Downstream 10m</label>
    <type>Checkbox</type>
</CustomField>