force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_EAFormalSample__c.field-meta.xml
<CustomField>
    <fullName>FSM_EAFormalSample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4810</description>
    <label>EA Formal Sample</label>
    <type>Checkbox</type>
</CustomField>