force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_EffluentFlowC__c.field-meta.xml
<CustomField>
    <fullName>FSM_EffluentFlowC__c</fullName>
    <description>Created as part of US SFS-4810</description>
    <label>Effluent flow °C</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>