force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_EffluentFlowM3__c.field-meta.xml
<CustomField>
    <fullName>FSM_EffluentFlowM3__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Effluent flow M^3</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>