force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_EnvImpactComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnvImpactComments__c</fullName>
    <description>SFS-3010</description>
    <label>Environmental Impact Comments</label>
    <type>TextArea</type>
</CustomField>