force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_EquipmentUsed__c.field-meta.xml
<CustomField>
    <fullName>FSM_EquipmentUsed__c</fullName>
    <description>Created as part of SFS-3007</description>
    <label>Equipment used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Van Pack</fullName>
            </value>
            <value>
                <fullName>7.5t Jetter</fullName>
            </value>
            <value>
                <fullName>Jet/Vac</fullName>
            </value>
            <value>
                <fullName>Jetter (Off-Road)</fullName>
            </value>
            <value>
                <fullName>CCTV Van</fullName>
            </value>
            <value>
                <fullName>CCTV Van (Off-Road)</fullName>
            </value>
            <value>
                <fullName>Cleanup Vehicle</fullName>
            </value>
            <value>
                <fullName>Road Sweeper</fullName>
            </value>
            <value>
                <fullName>Repair Crew</fullName>
            </value>
            <value>
                <fullName>Repair Crew (with Mini-Digger)</fullName>
            </value>
            <value>
                <fullName>Manhole Crew</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>