force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_EstNoFishKill__c.field-meta.xml
<CustomField>
    <fullName>FSM_EstNoFishKill__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Estimated number of fish killed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>