force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FE2Consent__c.field-meta.xml
<CustomField>
    <fullName>FSM_FE2Consent__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>FE 3x Consent or Upper Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment – Non Visible High River Flow</fullName>
            </value>
            <value>
                <fullName>Treatment – Non Visible Medium River Flow</fullName>
            </value>
            <value>
                <fullName>Treatment – Non Visible Low River Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>