force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FeedbackToCOSCTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_FeedbackToCOSCTime__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Feedback to COSC Time</label>
    <type>DateTime</type>
</CustomField>