force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FencingType__c.field-meta.xml
<CustomField>
    <fullName>FSM_FencingType__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <inlineHelpText>Fencing may be installed on some pipe bridges. 	
The need for fencing will need to be assessed based on the risk but will be generally where the consequence is high i.e. rail crossings / high fall and likelihood is sufficient. 	
Fencing comes in different styles and palisade fencing is most secure with post and rail less secure and can be climbed. 	
Fencing may require planning permission and land agreements.</inlineHelpText>
    <label>What type of fencing ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fencing present and in good condition</fullName>
            </value>
            <value>
                <fullName>No fencing and fencing not required/suitable</fullName>
            </value>
            <value>
                <fullName>Fencing provided by 3rd party or low level fencing easily climbed over</fullName>
            </value>
            <value>
                <fullName>Additional fencing should be considered (detail below)</fullName>
            </value>
            <value>
                <fullName>Fencing in poor state of repair i,e damaged / signs of ingress</fullName>
                <label>Fencing in poor state of repair i.e damaged / signs of ingress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>