force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FencingTypeComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_FencingTypeComments__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <label>What type of fencing ? Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>