force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FishKill__c.field-meta.xml
<CustomField>
    <fullName>FSM_FishKill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4810</description>
    <label>Fish Kill</label>
    <type>Checkbox</type>
</CustomField>