force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FLOC__c.field-meta.xml
<CustomField>
    <fullName>FSM_FLOC__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <formula>FSM_WorkOrder__r.FSM_Floc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLOC</label>
    <type>Text</type>
</CustomField>