force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FootwayClosure__c.field-meta.xml
<CustomField>
    <fullName>FSM_FootwayClosure__c</fullName>
    <description>SFS-3010</description>
    <label>Footway closure?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes- Walkway provided</fullName>
            </value>
            <value>
                <fullName>Yes- Alternate Route</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>