force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Form_Ended_Early__c.field-meta.xml
<CustomField>
    <fullName>FSM_Form_Ended_Early__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4790</description>
    <label>Form Ended Early</label>
    <type>Checkbox</type>
</CustomField>