force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FormType__c.field-meta.xml
<CustomField>
    <fullName>FSM_FormType__c</fullName>
    <description>Created as a part of SFS-3958
Updated as part of SFS-4810 to add PIA PIR</description>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Duration Works Risk Assessment</fullName>
            </value>
            <value>
                <fullName>NHH Meter</fullName>
            </value>
            <value>
                <fullName>Gap Site</fullName>
            </value>
            <value>
                <fullName>Site Area, SWD, Foul</fullName>
            </value>
            <value>
                <fullName>Job Completion</fullName>
            </value>
            <value>
                <fullName>Pre-site checklist</fullName>
            </value>
            <value>
                <fullName>Risk Assessment-Site Specific</fullName>
            </value>
            <value>
                <fullName>DST Self Audit</fullName>
            </value>
            <value>
                <fullName>Valve Management</fullName>
            </value>
            <value>
                <fullName>Non-infra Raise new and follow on work</fullName>
            </value>
            <value>
                <fullName>Infra Follow on work request</fullName>
            </value>
            <value>
                <fullName>Digger/Trailer Checks/C&amp;G Check</fullName>
            </value>
            <value>
                <fullName>Sewerage-Job Feedback</fullName>
            </value>
            <value>
                <fullName>Sewerage-Further Work Request (SCM)</fullName>
            </value>
            <value>
                <fullName>Sewerage Incident Report</fullName>
            </value>
            <value>
                <fullName>Reinstatement Form/Full Reg</fullName>
            </value>
            <value>
                <fullName>Rechargeable Works-Damage Description Report</fullName>
            </value>
            <value>
                <fullName>Metering Job Feedback Form</fullName>
            </value>
            <value>
                <fullName>Meter Details Form</fullName>
            </value>
            <value>
                <fullName>Distribution Interruption Form</fullName>
            </value>
            <value>
                <fullName>Distribution Feedback</fullName>
            </value>
            <value>
                <fullName>SPS Standard</fullName>
            </value>
            <value>
                <fullName>SPS Complex</fullName>
            </value>
            <value>
                <fullName>Asset Update Form</fullName>
            </value>
            <value>
                <fullName>Vehicle Check</fullName>
            </value>
            <value>
                <fullName>Risk Assessment - Paper</fullName>
            </value>
            <value>
                <fullName>Waste Water Chemical Acceptance and Authorisation to Discharge Form</fullName>
            </value>
            <value>
                <fullName>Clean Water Chemical Acceptance and Authorisation to Discharge Assessment</fullName>
            </value>
            <value>
                <fullName>Working Set Pre Use Inspection</fullName>
            </value>
            <value>
                <fullName>HD Risk Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>