force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Friday__c.field-meta.xml
<CustomField>
    <fullName>FSM_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3010</description>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>