force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWR__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWR__c</fullName>
    <description>Created as a part of SFS-5321</description>
    <label>Follow on work raised</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Follow-on work raised</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Comm Pipe</fullName>
            </value>
            <value>
                <fullName>BBox/Stop Tap</fullName>
            </value>
            <value>
                <fullName>Hydrant/Washout</fullName>
            </value>
            <value>
                <fullName>Valve/air valve</fullName>
            </value>
            <value>
                <fullName>BOPP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>